# agnflow

./: .cursorrules  .gitignore  404.html  =1.20.0  Makefile  PATH_FIX_REPORT.md  README.md  README_en.md  README_zh.md  build_docs.sh  index.html  mkdocs-en.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  test_install.py  theme-configs.md
.github/workflows/: docs.yml
AGENT_INTEGRATION/: index.html
API/: index.html
api/: index.html
assets/agnx/: data.json  render.html  render.old.html
docs/: README.md  a2a.md  getting-started.md  index.md
docs/en/: api-reference.md  core-concepts.md  examples.md  getting-started.md  index.md
docs/zh/: api-reference.md  core-concepts.md  examples.md  getting-started.md  index.md
en/: 404.html  index.html
en/AGENT_INTEGRATION/: index.html
en/API/: index.html
en/a2a/: index.html
en/en/: index.html
en/en/api-reference/: index.html
en/en/core-concepts/: index.html
en/en/examples/: index.html
en/en/getting-started/: index.html
en/getting-started/: index.html
en/search/: search_index.json
en/zh/: index.html
en/zh/api-reference/: index.html
en/zh/core-concepts/: index.html
en/zh/examples/: index.html
en/zh/getting-started/: index.html
examples/: chat.py  disconnect_examples.py  example_old.py  mixed_injection_example.py  rapid-dev.py  runtime_node_management.py  simple_chatbot.py  test_hitl.py  test_supervisor_connections.py  test_swarm_connections.py  test_workflow.py  test_workflow_advanced.py  workflow_agents_example.py  zhipu.py
examples/chatbot/: agent_nodes.py  main.py
examples/fastapi_background/: main.py
examples/fastapi_hitl/: nodes.py  server.py
examples/streaming_chat/: CHANGELOG.md  Dockerfile  db.py  docker-compose.yml  nginx.conf  server.py  start.sh  test_redis_pubsub.py
examples/streaming_chat/assets/: index.html
getting-started/: index.html
search/: search_index.json
site/: sitemap.xml
site/AGENT_INTEGRATION/: index.html
site/search/: search_index.json
src/agnflow/: __init__.py  agents.py  core.py  example.py  hitl.py  utils.py
src/agnflow/agent/: a2a.py  chatbot.py  cot.py  llm.py  memory.py  msg.py  tao.py  utils.py  zhipu.py
src/agnflow/agent/hitl/: api.py  cli.py
src/agnflow/assets/: index_en.html  index_zh.html
src/agnflow/chatbot/: chat_node.py  chatbot_db.py  config.py  routes.py  server.py  type.py  web_node.py  websocket.py
src/agnflow/core/: __init__.py  connection.py  flow.py  node.py  type.py
src/agnflow/utils/: __init__.py  code.py  pprint.py  search.py  text.py  type.py
stylesheets/: extra.css  extra.js
zh/: 404.html  index.html  sitemap.xml
zh/AGENT_INTEGRATION/: index.html
zh/API/: index.html
zh/a2a/: index.html
zh/en/: index.html
zh/en/api-reference/: index.html
zh/en/core-concepts/: index.html
zh/en/examples/: index.html
zh/en/getting-started/: index.html
zh/getting-started/: index.html
zh/search/: search_index.json
zh/zh/: index.html
zh/zh/api-reference/: index.html
zh/zh/core-concepts/: index.html
zh/zh/examples/: index.html
zh/zh/getting-started/: index.html
