[project]
name = "agnflow"
version = "0.1.0"
description = "一个简洁的 Python 工作流引擎，支持同步与异步节点、分支、循环、流程图渲染。"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "openai>=1.0.0",
    "duckduckgo-search>=4.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "numpy>=1.21.0"
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.rye.scripts]

[project.urls]
Homepage = "https://github.com/yourname/agnflow"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agnflow"]
