[project]
name = "agnflow"
version = "0.1.4"
description = "一个简洁的 Python 智能体工作流引擎，支持同步与异步节点、分支、循环、流程图渲染。"
authors = [
    { name = "jianduo1", email = "jianduo1@gmail.com" }
]
dependencies = [
    "openai>=1.0.0",
    "duckduckgo-search>=4.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "pydantic>=2.11.7",
    "ipython>=8.0.0,<9.0.0",
    "graphviz>=0.21",
    "numpy>=1.26.0,<2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "zhipuai>=2.1.5.20250708",
    "fastmcp>=2.10.1",
    "serpapi>=0.1.5",
    "soundfile>=0.13.1",
    "a2a>=0.44",
    "websockets>=15.0.1",
    "xmltodict>=0.14.2",
    "redis>=6.2.0",
    "pydub>=0.25.1",
    "aiosqlite>=0.21.0",
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
keywords = ["workflow", "agent", "llm", "async", "python", "automation", "human-in-the-loop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-minify-plugin>=0.8.0",
    "granian>=2.0.0"
]
ai = [
    "sentence-transformers>=2.2.0"
]

[project.urls]
Homepage = "https://github.com/jianduo1/agnflow"
Documentation = "https://github.com/jianduo1/agnflow/tree/main/docs"
Repository = "https://github.com/jianduo1/agnflow.git"
Issues = "https://github.com/jianduo1/agnflow/issues"
Changelog = "https://github.com/jianduo1/agnflow/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agnflow"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-minify-plugin>=0.8.0",
    "granian>=2.0.0"
]
